--- a/apps/block_scout_web/assets/css/components/_form.scss
+++ b/apps/block_scout_web/assets/css/components/_form.scss
@@ -1,4 +1,4 @@
-$form-control-border-color: #e2e5ec !default;
+$form-control-border-color: $tertiary !default;
 $form-control-border-color-active: $primary !default;
 
 .form-control {
