--- a/apps/block_scout_web/assets/css/components/_card.scss
+++ b/apps/block_scout_web/assets/css/components/_card.scss
@@ -1,12 +1,12 @@
-$card-background-color: #fff !default;
-$card-tab-active: $primary !default;
+$card-background-color: $tertiary  !default;
+$card-tab-active: #606060 !default;
 $card-default-border-radius: 10px !default;
 $card-horizontal-padding: 30px;
 $card-vertical-padding: 30px;
-$card-background-1: $primary !default;
+$card-background-1: $tertiary !default;
 $card-background-1-text-color: #fff !default;
-$card-tab-icon-color: #20b760 !default;
-$card-tab-icon-color-active: #fff !default;
+$card-tab-icon-color: $secondary !default;
+$card-tab-icon-color-active: $secondary !default;
 
 .card {
   background-color: $card-background-color;
@@ -55,6 +55,7 @@ $card-tab-icon-color-active: #fff !default;
   font-weight: normal;
   line-height: 1.2rem;
   margin-bottom: 2rem;
+  color: $secondary;
 
   &.lg-card-title {
     @media (max-width: 374px) {
@@ -89,7 +90,7 @@ $card-tab-icon-color-active: #fff !default;
 }
 
 .card-subtitle {
-  color: #333;
+  color: #fff;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.2;
