--- a/apps/block_scout_web/assets/css/components/_search.scss
+++ b/apps/block_scout_web/assets/css/components/_search.scss
@@ -34,7 +34,7 @@
     padding: 0 !important;
     border: none !important;
     border-radius: 0 !important;
-    background-color: #f5f6fa !important;
+    background-color: $tertiary !important;
     @media screen and (max-width: 992px) {
         height: auto !important;
     }
