--- a/apps/block_scout_web/lib/block_scout_web/templates/transaction/overview.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/transaction/overview.html.eex
@@ -149,7 +149,7 @@
             <dt class="col-sm-3 col-lg-2 text-muted">
               <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
                 text: gettext("Block number containing the transaction.") %>
-              <%= gettext "Block" %></dt>
+              <%= gettext("Block Number") %></dt>
             <dd class="col-sm-9 col-lg-10" data-selector="block-number">
               <%= if block do %>
                 <%= link(
