--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -10,8 +10,8 @@ $header-textfield-text-color: $header-links-color !default;
 $header-textfield-background-color: $tertiary !default;
 $header-textfield-magnifier-color: $header-links-color !default;
 $header-link-horizontal-padding: 0.71rem;
-$navbar-logo-height: auto !default;
-$navbar-logo-width: 100% !default;
+$navbar-logo-height: 28px !default;
+$navbar-logo-width: auto !default;
 
 .navbar.navbar-primary {
   background-color: $header-background-color;
@@ -242,7 +242,7 @@ $navbar-logo-width: 100% !default;
 }
 
 .navbar-logo {
-  max-height: $navbar-logo-height;
+  height: $navbar-logo-height;
   width: $navbar-logo-width;
 }
 
