change Ether to FUEL + more cosmetic changes

--- a/apps/block_scout_web/assets/css/components/_card.scss
+++ b/apps/block_scout_web/assets/css/components/_card.scss
@@ -156,7 +156,7 @@ $card-tab-icon-color-active: $secondary !default;
 .card-body {
   padding: $card-horizontal-padding;
   background-color: #323232;
-  border-radius: 0.25rem;
+  border-radius: 7px;
 }
 
 .card-body-flex-column-space-between {
