block hash -> hash, disable dark mode button, supported (2->3) verification methods

--- a/apps/block_scout_web/assets/css/theme/_mamba_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_mamba_variables.scss
@@ -94,3 +94,6 @@ $dark-primary: #000;
 $dark-secondary: #f00;
 $dark-primary-alternate: #2d2d2d; 
 
+.dark-mode-changer {
+  visibility: collapse;
+}
