--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_search.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_search.html.eex
@@ -1,6 +1,6 @@
 <!-- Search navbar -->
 <div class="search-form d-lg-flex d-inline-block <%= if assigns[:additional_classes] do @additional_classes |> Enum.join(" ") end %>">
-	<div class="input-group" style="width: 100%;" title='<%= gettext("Search by address, token symbol name, transaction hash, block number or block hash") %>'>
+	<div class="input-group" style="width: 100%;" title='<%= gettext("Search by address, token symbol name, transaction hash, block number or hash") %>'>
 		<div class="form-control search-control me auto <%= if assigns[:additional_classes] do @additional_classes |> Enum.join(" ") end %>">
 			<input
 				id="<%= @id %>"
