--- a/apps/block_scout_web/assets/css/components/_button.scss
+++ b/apps/block_scout_web/assets/css/components/_button.scss
@@ -1,4 +1,4 @@
-$button-primary-color: $primary !default;
+$button-primary-color: #606060 !default;
 $button-secondary-color: $secondary !default;
 
 .button, .btn {
