--- a/apps/block_scout_web/assets/css/components/_log-search.scss
+++ b/apps/block_scout_web/assets/css/components/_log-search.scss
@@ -21,10 +21,10 @@
 
 .logs-search-input, .logs-search-btn, .logs-search-btn-cancel {
 	height: 24px;
-	background-color: #f5f6fa;
-	border: 1px solid #f5f6fa;
-	color: #333;
-	border-radius: 2px;
+	background-color: #606060;
+	border: 1px solid #606060;
+	color: #fff;
+	border-radius: 4px;
 	outline: none;
 	font-family: Nunito, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 12px;
