--- a/apps/block_scout_web/assets/css/components/_search.scss
+++ b/apps/block_scout_web/assets/css/components/_search.scss
@@ -42,7 +42,7 @@
 
 .main-search-autocomplete, .main-search-autocomplete-mobile {
     font-size: 14px !important;
-    color: #828ba0 !important;
+    color: #e6e6e6 !important;
 }
 
 .autocomplete-category {
