--- a/apps/block_scout_web/assets/css/components/_transaction-input.scss
+++ b/apps/block_scout_web/assets/css/components/_transaction-input.scss
@@ -1,10 +1,10 @@
 .transaction-input-text {
   white-space: pre;
-  color: black;
+  color: #fff;
 
   pre {
     code {
-      color: black;
+      color: #fff;
     }
   }
 }
