--- a/apps/block_scout_web/assets/css/theme/custom_contracts/_dark-forest-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/custom_contracts/_dark-forest-theme.scss
@@ -9,7 +9,7 @@ $dark-secondary: $dark-primary;
 $dark-primary-alternate: $dark-primary;
 
 .dark-forest-theme-applied {
-	color: #ffffff;
+	color: #e6e6e6;
 	background-color: $body-dark;
 
 	.dark-mode-changer--dark svg path {
