--- a/apps/block_scout_web/assets/css/components/_btn_dropdown_line.scss
+++ b/apps/block_scout_web/assets/css/components/_btn_dropdown_line.scss
@@ -1,11 +1,10 @@
-$btn-dropdown-line-bg: #fff !default;
-$btn-dropdown-line-color: #e2e5ec !default;
-$btn-dropdown-line-color-hover: #f5f6fa !default;
-$btn-dropdown-line-font: #333;
+$btn-dropdown-line-bg: #606060 !default;
+$btn-dropdown-line-color: #606060!default;
+$btn-dropdown-line-color-hover: #3C3C3C!default;
+$btn-dropdown-line-font: #F6F7F9;
 
 .btn-dropdown-line {
   @include btn-line($btn-dropdown-line-bg, $btn-dropdown-line-color, 14px);
-  border-color: $btn-dropdown-line-color;
   color: $btn-dropdown-line-font;
   outline: none !important;
   margin-right: 20px;
@@ -15,7 +14,6 @@ $btn-dropdown-line-font: #333;
 
   &:hover {
     background-color: $btn-dropdown-line-color-hover;
-    border-color: $btn-dropdown-line-color;
     color: $btn-dropdown-line-font;
   }
 }
