--- a/apps/block_scout_web/assets/css/theme/_goerli_variables-non-critical.scss
+++ b/apps/block_scout_web/assets/css/theme/_goerli_variables-non-critical.scss
@@ -2,7 +2,7 @@
 $primary: #2b2b2b;
 $secondary: #eac247;
 $tertiary: #929292;
-$additional-font: #ffffff;
+$additional-font: #e6e6e6;
 $sub-accent-color: #a46f30;
 
 $btn-line-color: $sub-accent-color; // button border and font color && hover bg color
