--- a/apps/block_scout_web/lib/block_scout_web/templates/address_contract_verification/new.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address_contract_verification/new.html.eex
@@ -103,7 +103,7 @@
           <%=
             link(
               gettext("Cancel"),
-              class: "btn-no-border",
+              class: "btn-full-primary",
               to: address_contract_path(@conn, :index, @address_hash)
               )
           %>
