--- a/apps/block_scout_web/assets/css/components/_tile.scss
+++ b/apps/block_scout_web/assets/css/components/_tile.scss
@@ -11,7 +11,7 @@ $tile-type-unique-token-image-color: $orange !default;
 $tile-type-internal-transaction-color: $teal !default;
 $tile-type-api-documentation-color: $primary !default;
 $tile-type-progress-bar-color: $primary !default;
-$tile-status-error-reason: #ff7986 !default;
+$tile-status-error-reason: #b13f3f !default;
 $tile-status-awaiting-internal-transactions: $warning !default;
 $tile-padding: 1rem;
 $tile-title-color: #333 !default;
@@ -19,7 +19,7 @@ $tile-body-a-color: #5959d8 !default;
 
 @mixin generate-tile-block($prefix, $color, $label-color: false) {
   &#{ $prefix } {
-    border-left: 4px solid $color;
+    // border-left: 4px solid $color;
 
     .tile-transaction-type-block {
       a {
@@ -45,9 +45,9 @@ $tile-body-a-color: #5959d8 !default;
 
     .tile-transaction-type-block {
       background-color: rgba($color, 0.1);
-      border-bottom: 1px solid $color;
-      border-right: 1px solid $color;
-      border-top: 1px solid $color;
+      // border-bottom: 1px solid $color;
+      // border-right: 1px solid $color;
+      // border-top: 1px solid $color;
       color: $color;
     }
   }
@@ -56,6 +56,7 @@ $tile-body-a-color: #5959d8 !default;
 /*********************************************************************/
 
 .tile-label {
+  color: #fff;
   font-size: 12px;
   font-weight: 700;
   line-height: 1.2;
@@ -117,7 +118,7 @@ $tile-body-a-color: #5959d8 !default;
 }
 
 .tile-bottom-contents {
-  background-color: #f6f7f9;
+  background-color: #3c3c3c;
   font-size: 12px;
   line-height: 1.2;
   padding: 0.8rem 1rem;
@@ -141,11 +142,21 @@ $tile-body-a-color: #5959d8 !default;
 }
 
 .tile-muted {
-  background-color: $gray-100;
-  border-left: 1px solid $border-color;
+  background-color: #323232;
+  border-color: #323232;
   box-shadow: none;
+  pre {
+    color: #aaa;
+  }
+  .alert-info {
+    background-color: #323232;
+    border-color: #323232;
+    color: #aaa;
+  }
 }
-
+.text-dark { 
+  color: #aaa !important; 
+}
 .tile-function-response {
   span.function-response-item {
     display: block;
@@ -167,6 +178,7 @@ $tile-body-a-color: #5959d8 !default;
 }
 
 .tile {
+  background-color: #3C3C3C;
   span[data-address-hash] {
     color: $tile-body-a-color;
   }
@@ -187,7 +199,7 @@ $tile-body-a-color: #5959d8 !default;
   }
 
   .tile-title {
-    color: $tile-title-color;
+    color: #a3a3a3;
     font-size: 12px;
 
     &-hash {
@@ -200,7 +212,7 @@ $tile-body-a-color: #5959d8 !default;
     }
   }
   border-radius: 4px;
-  border: 1px solid $border-color;
+  // border: 1px solid $border-color;
   color: $text-muted;
   flex-grow: 1;
   font-size: 12px;
@@ -278,6 +290,7 @@ $tile-body-a-color: #5959d8 !default;
   &.tile-type-block {
     max-width: 100%;
     .tile-title {
+      color: #a3a3a3;
       font-weight: 700;
       line-height: 1.2;
       margin-bottom: 12px;
@@ -293,7 +306,7 @@ $tile-body-a-color: #5959d8 !default;
   }
 
   &.tile-type-token {
-    border: 1px solid $border-color;
+    // border: 1px solid $border-color;
   }
 
   &.tile-type-token-transfer {
@@ -432,13 +445,13 @@ $tile-body-a-color: #5959d8 !default;
     left: -4px;
     width: calc(100% + 5px);
     height: calc(100% + 2px);
-    background-color: #F6F7F9;
+    background-color: #3C3C3C;
     border-radius: 4px;
     overflow: hidden;
     transition: .24s ease-out;
-    border-top: 1px solid #dee2e6;
-    border-right: 1px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
+    // border-top: 1px solid #dee2e6;
+    // border-right: 1px solid #dee2e6;
+    // border-bottom: 1px solid #dee2e6;
     pointer-events: none;
     .tile-type-line-up {
       position: absolute;
