--- a/apps/block_scout_web/lib/block_scout_web/templates/address_contract/index.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address_contract/index.html.eex
@@ -140,7 +140,7 @@
           <% {:selfdestructed, transaction_init} -> %>
             <div class="d-flex justify-content-between align-items-baseline">
               <h3><%= gettext "Contract Creation Code" %></h3>
-              <button type="button" class="btn-line" id="button" data-clipboard-text="<%= transaction_init %>" aria-label="copy contract creation code">
+              <button type="button" class="button button-primary" id="button" data-clipboard-text="<%= transaction_init %>" aria-label="copy contract creation code">
                 <%= gettext "Copy Contract Creation Code" %>
               </button>
             </div>
@@ -156,7 +156,7 @@
               <div class="d-flex justify-content-between align-items-baseline">
                 <h3><%= gettext "Contract Creation Code" %></h3>
                 <div class="buttons">
-                  <button type="button" class="btn-line" style="float: left;" id="button" data-clipboard-text="<%= creation_code(@address) %>" aria-label="copy contract creation code">
+                  <button type="button" class="button button-primary" style="float: left;" id="button" data-clipboard-text="<%= creation_code(@address) %>" aria-label="copy contract creation code">
                     <%= gettext "Copy Contract Creation Code" %>
                   </button>
                   <%= if match?({:selfdestructed, _}, contract_creation_code) do %>
@@ -183,7 +183,7 @@
             <%= if fully_verified do %>
               <div class="d-flex justify-content-between align-items-baseline">
                 <h3><%= gettext "Deployed ByteCode" %></h3>
-                <button type="button" class="btn-line" style="float: left;" id="button" data-clipboard-text="<%= contract_code %>" aria-label="copy contract creation code">
+                <button type="button" class="button button-primary" style="float: left;" id="button" data-clipboard-text="<%= contract_code %>" aria-label="copy contract creation code">
                   <%= gettext "Copy Deployed ByteCode" %>
                 </button>
               </div>
@@ -193,7 +193,7 @@
                   <h3><%= gettext "Deployed ByteCode" %></h3>
                 </div>
                 <div class="buttons">
-                  <button type="button" class="btn-line" style="float: left;" id="button" data-clipboard-text="<%= contract_code %>" aria-label="copy contract creation code">
+                  <button type="button" class="button button-primary" style="float: left;" id="button" data-clipboard-text="<%= contract_code %>" aria-label="copy contract creation code">
                     <%= gettext "Copy Deployed ByteCode" %>
                   </button>
                   <%= if match?({:selfdestructed, _}, contract_creation_code) and !creation_code(@address) do %>
