--- a/apps/block_scout_web/lib/block_scout_web/templates/address_contract_verification_via_flattened_code/new.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address_contract_verification_via_flattened_code/new.html.eex
@@ -144,11 +144,11 @@
             <%= render BlockScoutWeb.CommonComponentsView, "_loading_spinner.html", loading_text: gettext("Loading...") %>
           </button>
           <%= submit gettext("Verify & publish"), class: "btn-full-primary mr-2", "data-button-loading": "animation"  %>
-          <%= reset gettext("Reset"), class: "btn-line mr-2 js-smart-contract-form-reset" %>
+          <%= reset gettext("Reset"), class: "btn-full-primary mr-2 js-smart-contract-form-reset" %>
           <%=
             link(
               gettext("Cancel"),
-              class: "btn-no-border",
+              class: "btn-full-primary",
               to: address_contract_path(@conn, :index, @address_hash)
               )
           %>
