--- a/apps/block_scout_web/lib/block_scout_web/templates/api_docs/_action_tile.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/api_docs/_action_tile.html.eex
@@ -39,7 +39,7 @@
         role="button"
       ><%= gettext "Try it out" %></button>
       <button
-        class="collapse btn-line float-right"
+        class="collapse btn-full-primary float-right"
         data-action="<%= @action.name %>"
         data-module="<%= @module_name %>"
         data-selector='<%= "#{@module_name}-#{@action.name}-btn-try-api-cancel" %>'
@@ -129,7 +129,7 @@
         </div>
         <div class="col-sm-2 col-md-2 mt-2 mt-md-0">
           <button
-            class="collapse button button-secondary w-100"
+            class="collapse button button-primary w-100"
             data-action="<%= @action.name %>"
             data-module="<%= @module_name %>"
             data-selector='<%= "#{@module_name}-#{@action.name}-btn-try-api-clear" %>'
