--- a/apps/block_scout_web/assets/css/components/_footer.scss
+++ b/apps/block_scout_web/assets/css/components/_footer.scss
@@ -74,7 +74,7 @@ $footer-logo-width: auto !default;
   padding-top: 0;
 
   h3 {
-    color: $footer-title-color;
+    color: #fff;
     font-size: 14px;
     font-weight: 300;
     line-height: 1.4;
