--- a/apps/block_scout_web/assets/css/components/_new_smart_contract.scss
+++ b/apps/block_scout_web/assets/css/components/_new_smart_contract.scss
@@ -119,7 +119,7 @@ $new-smart-contract-center-column-margin-right: 30px;
 
   .smart-contract-form-group-tooltip {
     background-color: #606060;
-    color: #919191;
+    color: #ffffff;
     flex-grow: 0;
     flex-shrink: 0;
     font-size: 12px;
