--- a/apps/block_scout_web/assets/css/theme/_base_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_base_variables.scss
@@ -38,18 +38,18 @@ $grays: map-merge(
   $grays
 );
 
-$blue: #4786ff !default;
+$blue: #2773c1 !default;
 $indigo: #5b389f !default;
-$purple: #997fdc !default;
+$purple: #6a3d9b !default;
 $pink: #e83e8c !default;
 $lilac: #b38dc9 !default;
-$red: #c74d39 !default;
+$red: #b13f3f !default;
 $orange: #ef9a60 !default;
 $yellow: #ffc107 !default;
-$green: #20b760 !default;
-$teal: #009097 !default;
+$green: #5c6e55 !default;
+$teal: #3d8e9b !default;
 $cyan: #90e1d8 !default;
-$dark-purple: #923dc3;
+$dark-purple: #6a3d9b;
 
 $colors: () !default;
 $colors: map-merge(
