--- a/apps/block_scout_web/assets/css/theme/_base_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_base_variables.scss
@@ -39,16 +39,16 @@ $grays: map-merge(
 );
 
 $blue: #2773c1 !default;
-$indigo: #5b389f !default;
+$indigo: #6a3d9b !default;
 $purple: #6a3d9b !default;
 $pink: #e83e8c !default;
 $lilac: #b38dc9 !default;
 $red: #b13f3f !default;
-$orange: #ef9a60 !default;
+$orange: #3d8e9b !default;
 $yellow: #ffc107 !default;
 $green: #5c6e55 !default;
-$teal: #3d8e9b !default;
-$cyan: #90e1d8 !default;
+$teal: #5c6e55 !default;
+$cyan: #5c6e55 !default;
 $dark-purple: #6a3d9b;
 
 $colors: () !default;
