--- a/apps/block_scout_web/assets/css/components/_tile.scss
+++ b/apps/block_scout_web/assets/css/components/_tile.scss
@@ -2,17 +2,17 @@ $tile-type-block-color: $primary !default;
 $tile-type-uncle-color: $cyan !default;
 $tile-type-reorg-color: $purple !default;
 $tile-type-emission-reward-color: $lilac !default;
-$tile-type-transaction-color: $blue !default;
-$tile-type-contract-call-color: $green !default;
-$tile-type-contract-creation-color: $dark-purple !default;
-$tile-type-token-transfer-color: $orange !default;
-$tile-type-unique-token-color: $orange !default;
-$tile-type-unique-token-image-color: $orange !default;
+$tile-type-transaction-color: #2773c1 !default;
+$tile-type-contract-call-color: #5c6e55 !default;
+$tile-type-contract-creation-color: #3d8e9b !default;
+$tile-type-token-transfer-color: #6a39db !default;
+$tile-type-unique-token-color: #6a39db !default;
+$tile-type-unique-token-image-color: #6a39db !default;
 $tile-type-internal-transaction-color: $teal !default;
 $tile-type-api-documentation-color: $primary !default;
 $tile-type-progress-bar-color: $primary !default;
 $tile-status-error-reason: #b13f3f !default;
-$tile-status-awaiting-internal-transactions: $warning !default;
+$tile-status-awaiting-internal-transactions: #b13f3f !default;
 $tile-padding: 1rem;
 $tile-title-color: #fff !default;
 $tile-body-a-color: magenta !default;
@@ -33,14 +33,16 @@ $tile-body-a-color: magenta !default;
 
     .tile-label {
       color: #fff;
+      font-weight: 600;
+      letter-spacing: 0.04em;
     }
 
     .tile-status-label {
-      color: inherit;
+      color: white;
     }
 
     .tile-transaction-type-block {
-      background-color: rgba($color, 0.1);
+      background-color: rgba($color, 1);
       // border-bottom: 1px solid $color;
       // border-right: 1px solid $color;
       // border-top: 1px solid $color;
