--- a/apps/block_scout_web/lib/block_scout_web/templates/block/_tile.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/block/_tile.html.eex
@@ -2,7 +2,8 @@
 <% priority_fee = if !is_nil(@block.base_fee_per_gas), do: BlockPriorityFeeCounter.fetch(@block.hash), else: nil %>
 <div class="tile tile-type-<%= String.downcase(@block_type) %> fade-up" data-selector="block-tile" data-block-number="<%= to_string(@block.number) %>" data-block-hash="<%= @block.hash %>">
   <div class="row">
-    <div class="tile-transaction-type-block col-md-2 d-flex flex-row flex-md-column">
+    <div class="tile-transaction-type-block col-md-2 d-flex flex-row flex-md-column"
+    data-selector="block-tile-attr">
       <%= if @block_type == "Block" do %>
         <%= link(
               class: "tile-label",
